# minilysis

./: .gitignore  devbox.json  docker-compose.yml  main.py
back/: Dockerfile  alembic.ini  database.py  dev-entrypoint.sh  main.py  pyproject.toml
back/admins/: user.py
back/alembic/: env.py
back/alembic/versions/: 5f26bb1327fd_.py  62b2f6c103e6_.py  effc3cd85f77_.py
back/api/endpoints/: user.py
back/db/: session.py
back/domains/: auth.py
back/migrations/models/: 1_20250224140454_None.py
back/models/: base.py  user.py
back/routes/: user.py
front/: Dockerfile  app.vue  dev-entrypoint.sh  nuxt.config.ts  package.json  pnpm-lock.yaml  schema.d.ts
front/composables/: openapi.ts
front/plugins/: openapi.ts
tasks/: __init__.py
