[project]
name = "minilysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.8",
    "sqlalchemy>=2.0.38",
]
